force-app/main/default/objects/SL_Convert__Field_Mapping__c/fields/SL_Convert__Active__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>