force-app/main/default/objects/SL_Convert__Field_Mapping__c/fields/SL_Convert__Context_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Context_Field_Name__c</fullName>
    <label>Context Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>