force-app/main/default/objects/SL_Convert__Field_Mapping__c/fields/SL_Convert__Context_Full_API__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Context_Full_API__c</fullName>
    <formula>IF(!ISBLANK(SL_Convert__Context_Field_Name__c),IF(CONTAINS(SL_Convert__Object_Relationship__r.SL_Convert__Context_Object_API__c, &apos;__c&apos;),LEFT(SL_Convert__Object_Relationship__r.SL_Convert__Context_Object_API__c, LEN(SL_Convert__Object_Relationship__r.SL_Convert__Context_Object_API__c)-1)+&apos;r&apos;,SL_Convert__Object_Relationship__r.SL_Convert__Context_Object_API__c)
+&apos;.&apos;+SL_Convert__Context_Field_Name__c,&apos;&apos;)</formula>
    <label>Context Field Full API Name</label>
    <type>Text</type>
</CustomField>