force-app/main/default/objects/SL_Convert__Field_Mapping__c/fields/SL_Convert__Object_Relationship__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Object_Relationship__c</fullName>
    <label>Object Relationship</label>
    <referenceTo>SL_Convert__Object_Relationship__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>