force-app/main/default/objects/SL_Convert__Field_Mapping__c/fields/SL_Convert__Target_Value__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Target_Value__c</fullName>
    <label>Target Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>