force-app/main/default/objects/SL_Convert__Field_Mapping__c/recordTypes/SL_Convert__Reference.recordType-meta.xml
<RecordType>
    <fullName>SL_Convert__Reference</fullName>
    <active>true</active>
    <description>Used to map one field&apos;s value to another.</description>
    <label>Reference</label>
</RecordType>