force-app/main/default/objects/SL_Convert__Field_Mapping__c/recordTypes/SL_Convert__Value.recordType-meta.xml
<RecordType>
    <fullName>SL_Convert__Value</fullName>
    <active>true</active>
    <description>Used to set the target field to a certain value.</description>
    <label>Value</label>
</RecordType>