force-app/main/default/objects/SL_Convert__Field_Mapping__c/listViews/SL_Convert__All.listView-meta.xml
<ListView>
    <fullName>SL_Convert__All</fullName>
    <columns>SL_Convert__Object_Relationship__c</columns>
    <columns>SL_Convert__Context_Full_API__c</columns>
    <columns>SL_Convert__Target_Full_API__c</columns>
    <columns>SL_Convert__Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>